<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/transfer_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="6dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:text="@string/transfer_title"
            android:textSize="20sp" />

        <Button
            android:id="@+id/transfer_title_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transfer_select" />

        <Button
            android:id="@+id/transfer_title_transfer"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transfer_transfer" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/transfer_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/transfer_title"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:orientation="horizontal"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_ok"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transfer_ok"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:gravity="end"
            android:text="@string/transfer_tip" />

    </LinearLayout>



    <ProgressBar
        android:id="@+id/transfer_progress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_below="@id/transfer_tip"
        android:layout_height="wrap_content" />

    <ListView
        android:id="@+id/transfer_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/transfer_progress" />

    <LinearLayout
        android:id="@+id/transfer_empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/transfer_progress"
        android:layout_alignParentBottom="true"
        android:background="#fafafa"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible">

        <ImageView
            android:id="@+id/transfer_empty_add"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:src="@drawable/icon_transfer_empty" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:text="@string/transfer_list_empty" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/transfer_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="#55000000"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_bg_main_loading"
            android:padding="24dp"
            android:gravity="center"
            android:orientation="vertical">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="18dp"
                android:text="@string/main_loading"
                android:textSize="16sp"
                android:textStyle="bold"/>

        </LinearLayout>

    </RelativeLayout>


</RelativeLayout>